--- a/src/components/Persona.css
+++ b/src/components/Persona.css
@@ -21,6 +21,7 @@
   margin-top: 10px;
   transform: scale(1);
   transition: 0.3s;
+  aspect-ratio: 1/1;
 }
 
 .avatar span {
